add_subdirectory(testanimation)
add_subdirectory(testtexture)
add_subdirectory(testplane)
add_subdirectory(testglslcomp)
add_subdirectory(testglslgeom)
add_subdirectory(testimgui)
add_subdirectory(testturbobadger)
add_subdirectory(testgpumc)
add_subdirectory(testcamera)
add_subdirectory(testoctree)
add_subdirectory(testoctreevisit)
add_subdirectory(testshapebuilder)
add_subdirectory(testvoxelfont)
add_subdirectory(testvoxelgpu)
add_subdirectory(testcomputetexture3d)
add_subdirectory(testtraze)
add_subdirectory(testhttpserver)
add_subdirectory(testskybox)
add_subdirectory(testbiomes)
add_subdirectory(testmeshrenderer)
#add_subdirectory(testtemplate)
