set(CMAKE_LINK_WHAT_YOU_USE OFF)

add_subdirectory(testbloom)
add_subdirectory(testcamera)
add_subdirectory(testcomputetexture3d)
add_subdirectory(testglslcomp)
add_subdirectory(testglslgeom)
add_subdirectory(testgpumc)
add_subdirectory(testimgui)
add_subdirectory(testoctree)
add_subdirectory(testoctreevisit)
add_subdirectory(testplane)
add_subdirectory(testshapebuilder)
#add_subdirectory(testtemplate)
add_subdirectory(testtexture)
add_subdirectory(testvoxelfont)
add_subdirectory(testvoxelgpu)
