add_subdirectory(shadertool)

if (VOXEDIT)
	add_subdirectory(voxedit)
else()
	message(STATUS "Don't build voxedit")
endif()
if (THUMBNAILER)
	add_subdirectory(thumbnailer)
else()
	message(STATUS "Don't build thumbnailer")
endif()
if (VOXCONVERT)
	add_subdirectory(voxconvert)
else()
	message(STATUS "Don't build voxconvert")
endif()
