add_subdirectory(shadertool)
add_subdirectory(formatprinter)

if (VOXEDIT)
	add_subdirectory(voxedit)
else()
	message(STATUS "Don't build voxedit")
endif()
if (VOXCONVERT)
	add_subdirectory(voxconvert)
else()
	message(STATUS "Don't build voxconvert")
endif()
if (PALCONVERT)
	add_subdirectory(palconvert)
else()
	message(STATUS "Don't build palconvert")
endif()
if (THUMBNAILER)
	add_subdirectory(thumbnailer)
else()
	message(STATUS "Don't build thumbnailer")
endif()
